main.css
body{
   
    position: relative;
    color: black transition .5s;
    background-color: transparent;
    transition-property: background-color, color;
    transition-duration: .5s;
}
.btn-info, .btn{
    background-color:none;
}

.jumbotron{
   background-color: transparent;
}
.display-1{
    font-size:14vmin;
}
.display-2 , h1{
    font-size:12vmin;
}
.display-3 , h2{
    font-size:10vmin;
}
.display-4 , h3{
    font-size:7vmin;
}
.project-copy{
    font-size:5vmin;
}
/* phones */
@media only screen and (max-width: 375px) {
   #title h2{
        font-size: 4.5vmin;
   }
   #prologue{
       display : none;
   }
   #navbar .nav-item{
       float: none;
   }
}

/* For Tablets */
@media only screen and (min-width: 376px) and (max-width: 780px) {
    #title h2{
        font-size: 6vmin;
    }
}
.my-2{
    border: .5px solid black;
}
#headline{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
}
#aboutMe{
    background-image:linear-gradient(salmon, red);
    margin-bottom: 30px;
    border-radius: 5px 5px 5px 5px;
    width: 95%;
    margin-left:2.5%;
}

#links{
    font-size: 1.5em;
    background-color:rgb(27, 44, 44);
    margin-bottom: 75px;
    padding-left: 20px;
}
#links ul{
    font-weight: 500;
    font-family: 'Roboto Mono', monospace;
    color:white;
}
#links a{
    
    color:darkorange;
}

#last{
    border-right: 2px solid white;
    margin: 0 auto;
   
   animation:
    blink-caret .85s step-end infinite;
}
#last-t{
    border-right: 4px solid white;
    margin: 0 auto;
   
   animation:
    blink-caret .85s step-end infinite;
}
.pageBreak{
    border: 1px solid white;
    border-radius:
}
.nbar{
    margin-top:0px;
}
@keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: white; }
  }
  @keyframes blink-caret-t {
    from, to { border-color: transparent }
    50% { border-color: black; }
  }
.header-link:hover{
    text-decoration: none;
}

.project-hl{
    color:white;
    background-color:limegreen;
}
.nav-link{
    color:salmon !important;
    text-decoration: none !important;
}
#title{
   
    width:100%;
    font-family: 'Roboto Mono', monospace;
   /* background-color:rgb(27, 44, 44); */
    padding:0px;
    margin:20px 0px 20px 0px;
   
    white-space: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
}

#title h2{

color: salmon !important;
display: inline-block;
/*width:  60%;*/
font-size:10vmin;
margin-left:0px;
margin-right: 0px;
font-weight: 1000;

}
#n{
    color: gray !important; 
}
#prologue{
    height:100vh;
    width:auto;
    background-color: white;
    background-color: salmon !important;
}

#prologue blockquote{
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding-top: 35vh;
    font-size:4em;
    line-height: 1.1;
}

#down-arrow{
 font-size: 300px;
 align-content: center;
}
/* span a is for most things,  li a is for the resume link*/
span a{
    text-decoration: underline;
}
li a{
    text-decoration: underline;
}

footer{
    text-align:center;
    margin: 30px 0px 0px 0px;
  
}
footer h4{
    width: auto;
    
}



.info-pt .col-6{
    padding-top:0px;
}
footer br{
    height:0px
}
li code{
    color : gray;
}

ul{
    list-style: none;
}
/*
.screenshot{
     height:auto;
     width: 100%;
}
*/
.img{
    height:auto;
    width: 100%;
}
.project-copy{
    vertical-align: center;
    padding:20px;
    font-size: 3vmin;
    
}

.ca{
   
    
}

.cb{
   
}
.cs-button-container button{
    margin:100px 0px 50px 0px;
    font-size:6vmin;
    border: 4px solid salmon !important;
    border-radius: 20px;
    color: salmon !important;
    font-family: 'Roboto Mono', monospace;
    font-weight: bold;
  
}
.cs-button-container button:active{
    background-color: none;
}
.card-body pre code{
    font-size:2vmin !important;
    line-height: .8;
}

.codeSnippet{
    display:none;

}


.icon{
    height:50px;
    width:50px;
    
}
.icon:hover{
    opacity: .65 !important;
    transition: .15s;
}


#title h2 #last{
    animation:
    blink-caret-t .85s step-end infinite;
}

.question{
 font-size: 4vmin;  
 color:salmon !important; 
 border:2px solid salmon !important;
 border-radius:10px;
 cursor: pointer;
 width:auto;
 text-align:center;
}
.answer{
    font-size: 3.5vmin;
    display:none;
    transition: display 0.5s ease-out;

}
.answer.is-active {
    display:block;
  }
.card-body pre code{
	font-size:5vmin;
}
.card{
    border:none;
}
.card-header{
    background-color: transparent;
}
.codeSnippet .card .card-header{
    font-size:3vmin !important;
    
}
.card {
    background-color:transparent !important;
}
#toggle-btn{
    border: 4px solid salmon !important;
    border-radius: 5px;
    font-size: 1.5vmin;
    color:salmon !important;
}

.fa-bars{
    color: salmon;
    font-size: 5vmin;
}
.navbar-toggler{
    border:none;
}
.navbar-toggler-icon{
    background-image: none !important;
    border:none;
}

